--- a/app/src/main/res/layout/fragment_print_status.xml
+++ b/app/src/main/res/layout/fragment_print_status.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="16dp"
+    android:padding="@dimen/print_status_default_margin"
     tools:context=".ui.print_status.PrintStatusFragment">
 
     <TextView
@@ -12,11 +12,11 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:textStyle="bold"
-        android:textSize="20sp"
-        android:layout_marginStart="0dp"
-        android:layout_marginTop="16dp"
-        android:paddingBottom="32dp"
-        android:text="@string/print_status_connected_to"
+        android:textSize="@dimen/print_status_text_size"
+        android:layout_marginStart="@dimen/zero_margin"
+        android:layout_marginTop="@dimen/print_status_default_margin"
+        android:paddingBottom="@dimen/print_status_double_margin"
+        android:text="@string/print_status_connected_to_message"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -27,10 +27,10 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:textStyle="bold"
-        android:textSize="20sp"
-        android:layout_marginStart="0dp"
-        android:layout_marginTop="0dp"
-        android:text="@string/print_status_state"
+        android:textSize="@dimen/print_status_text_size"
+        android:layout_marginStart="@dimen/zero_margin"
+        android:layout_marginTop="@dimen/zero_margin"
+        android:text="@string/print_status_state_label"
         app:layout_constraintEnd_toStartOf="@id/text_state"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/label_host" />
@@ -39,10 +39,10 @@
         android:id="@+id/text_state"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:textSize="20sp"
-        android:layout_marginStart="0dp"
-        android:layout_marginTop="0dp"
-        tools:text="Printing"
+        android:textSize="@dimen/print_status_text_size"
+        android:layout_marginStart="@dimen/zero_margin"
+        android:layout_marginTop="@dimen/zero_margin"
+        android:text="@string/print_status_printer_state_placeholder"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@id/label_state"
         app:layout_constraintTop_toBottomOf="@id/label_host" />
@@ -54,10 +54,10 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:textStyle="bold"
-        android:textSize="20sp"
-        android:layout_marginStart="0dp"
-        android:layout_marginTop="0dp"
-        android:text="@string/print_status_message"
+        android:textSize="@dimen/print_status_text_size"
+        android:layout_marginStart="@dimen/zero_margin"
+        android:layout_marginTop="@dimen/zero_margin"
+        android:text="@string/print_status_message_label"
         app:layout_constraintEnd_toStartOf="@id/text_message"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/label_state" />
@@ -66,10 +66,10 @@
         android:id="@+id/text_message"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:textSize="20sp"
-        android:layout_marginStart="0dp"
-        android:layout_marginTop="0dp"
-        tools:text="Some message"
+        android:textSize="@dimen/print_status_text_size"
+        android:layout_marginStart="@dimen/zero_margin"
+        android:layout_marginTop="@dimen/zero_margin"
+        android:text="@string/print_status_printing_message_placeholder"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@id/label_message"
         app:layout_constraintTop_toBottomOf="@id/text_state" />
@@ -87,10 +87,10 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:textStyle="bold"
-        android:textSize="20sp"
-        android:layout_marginStart="0dp"
-        android:layout_marginTop="0dp"
-        android:text="@string/print_status_file"
+        android:textSize="@dimen/print_status_text_size"
+        android:layout_marginStart="@dimen/zero_margin"
+        android:layout_marginTop="@dimen/zero_margin"
+        android:text="@string/print_status_file_label"
         app:layout_constraintEnd_toStartOf="@id/text_file"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/message_barrier" />
@@ -99,10 +99,10 @@
         android:id="@+id/text_file"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:textSize="20sp"
-        android:layout_marginStart="0dp"
-        android:layout_marginTop="0dp"
-        tools:text="bigfile-with-some-very-long-filename-that-spans-multiple-rows.gcode"
+        android:textSize="@dimen/print_status_text_size"
+        android:layout_marginStart="@dimen/zero_margin"
+        android:layout_marginTop="@dimen/zero_margin"
+        android:text="@string/print_status_long_file_name_placeholder"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@id/label_file"
         app:layout_constraintTop_toBottomOf="@id/message_barrier" />
@@ -120,10 +120,10 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:textStyle="bold"
-        android:textSize="20sp"
-        android:layout_marginStart="0dp"
-        android:layout_marginTop="0dp"
-        android:text="@string/print_status_time_elapsed"
+        android:textSize="@dimen/print_status_text_size"
+        android:layout_marginStart="@dimen/zero_margin"
+        android:layout_marginTop="@dimen/zero_margin"
+        android:text="@string/print_status_time_elapsed_label"
         app:layout_constraintEnd_toStartOf="@id/text_time_since_start"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/file_barrier" />
@@ -132,10 +132,10 @@
         android:id="@+id/text_time_since_start"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:textSize="20sp"
-        android:layout_marginStart="0dp"
-        android:layout_marginTop="0dp"
-        android:text="@string/dash"
+        android:textSize="@dimen/print_status_text_size"
+        android:layout_marginStart="@dimen/zero_margin"
+        android:layout_marginTop="@dimen/zero_margin"
+        android:text="@string/print_status_time_dash"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@id/label_time_since_start"
         app:layout_constraintTop_toBottomOf="@id/file_barrier" />
@@ -147,10 +147,10 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:textStyle="bold"
-        android:textSize="20sp"
-        android:layout_marginStart="0dp"
-        android:layout_marginTop="0dp"
-        android:text="@string/print_status_print_time_elapsed"
+        android:textSize="@dimen/print_status_text_size"
+        android:layout_marginStart="@dimen/zero_margin"
+        android:layout_marginTop="@dimen/zero_margin"
+        android:text="@string/print_status_print_time_elapsed_label"
         app:layout_constraintEnd_toStartOf="@id/text_time_spent_printing"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/label_time_since_start" />
@@ -159,10 +159,10 @@
         android:id="@+id/text_time_spent_printing"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:textSize="20sp"
-        android:layout_marginStart="0dp"
-        android:layout_marginTop="0dp"
-        android:text="@string/dash"
+        android:textSize="@dimen/print_status_text_size"
+        android:layout_marginStart="@dimen/zero_margin"
+        android:layout_marginTop="@dimen/zero_margin"
+        android:text="@string/print_status_time_dash"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@id/label_time_spent_printing"
         app:layout_constraintTop_toBottomOf="@id/text_time_since_start" />
